alignment fixes2

--- a/angular-app/src/app/searchresult/searchresult.component.scss
+++ b/angular-app/src/app/searchresult/searchresult.component.scss
@@ -603,6 +603,7 @@ col-sm-3 col-md-3{
 
 .back{
   float: left;
+  margin-left: 20%
 }
 
 .container-fluid{
